use USB CDC ACM backend for shell

--- a/prj.conf
+++ b/prj.conf
@@ -1,7 +1,17 @@
 CONFIG_GPIO=y
 CONFIG_SERIAL=y
-CONFIG_MAIN_STACK_SIZE=4096
+CONFIG_MAIN_STACK_SIZE=512
 CONFIG_SHELL=y
 CONFIG_SHELL_PROMPT_UART="kw1281-diag: "
 CONFIG_BOOT_BANNER=n
 CONFIG_SHELL_STACK_SIZE=4096
+CONFIG_USB=y
+CONFIG_USB_DEVICE_STACK=y
+CONFIG_USB_DEVICE_MANUFACTURER="Jonathan Klamroth <jonathan.klamroth@gmail.com>"
+CONFIG_USB_DEVICE_PRODUCT="kw1281-diag"
+CONFIG_USB_DEVICE_VID=0x16c0
+CONFIG_USB_DEVICE_PID=0x05e1
+CONFIG_USB_UART_CONSOLE=y
+CONFIG_UART_LINE_CTRL=y
+CONFIG_UART_SHELL_ON_DEV_NAME="CDC_ACM_0"
+CONFIG_SHELL_BACKEND_SERIAL_INIT_PRIORITY=51
